Created textbox, working on 'Go' button next

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   },
   "contributors": [
     {
-      "name": "",
-      "email": ""
+      "name": "Owen Xiong",
+      "email": "xion6136@stthomas.edu"
     },
     {
       "name": "",
