--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Matt-Westerhaus/Crime-App"
   },
   "scripts": {
     "dev": "vite",
